doing some color refactoring